<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound Profile Made Easy</string>
    <string name="sound_profile_button_label">Profile</string>
    <string name="no_profiles">No profiles inserted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="profiles_list_header">Long press to edit profile</string>
    <string name="profiles_list_footer">Press menu button for more options</string>
    
    <string name="widget_icon_description">Profile Icon</string>
    
    <string name="menu_insert">New Profile</string>
    <string name="menu_reset_data">Reset Data</string>
    
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="calls_only">Calls Only</string>
    <string name="normal">Normal</string>
    <string name="loud">Loud</string>
    
    <string name="edit_title">Sound Profile Edit</string>
    
    <string name="edit_menu_apply_current_sound_settings">Apply current sound settings</string>
    
    <string name="edit_name">Name</string>
    <string name="edit_icon_">Icon</string>
    <string name="edit_icon_description">Icon</string>
    <string name="edit_icon_low">Low</string>
    <string name="edit_icon_normal">Normal</string>
 	<string name="edit_icon_loud">Loud</string>
    <string name="edit_icon_vibrate">Vibrate</string>
   	
   	<string name="edit_haptic_feedback_enabled">Haptic Feedback Enabled</string>
   	
    <string name="edit_dialog_icon_title">Pick an icon</string>
    
    <string name="edit_vibrate">Vibrate</string>
    <string name="edit_ringer">Ringer</string>
    <string name="edit_notification">Notification</string>
    <string name="edit_alarm">Alarm</string>
    <string name="edit_music">Music</string>
    <string name="edit_system">System</string>
    <string name="edit_voice_call">Voice Call</string>
    
    <string name="edit_save">Save</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_reset">Reset</string>
    
    <string name="edit_validation_name_not_specified">Profile name not specified</string>
    
    <string name="edit_no_ringtone_selected">No Ringtone Selected</string>
    <string name="edit_select_ringtone">Ringtone</string>
    <string name="edit_select_ringtone_popup_title">Select tone</string>
    
    <string name="divider">divider</string>
    
    
</resources>